# Python

./: .gitignore  0_getting_started.py  10_class.py  12_modules.py  13_packages.py  2_arithmetics.py  6_tuples.py  7_dictionary.py  README.md  converters.py  utils.py
Level-1/: 11_inheritance.py  3_conditional_statements.py  9_exception.py
Level_1/: 14_built_in_lib.py  1_strings.py  4_loops.py  5_lists.py  8_functions.py
Level_1/ecommerce/: __init__.py  shipping.py
Level_2/: pyproject.toml
Level_2/0_function_arguments/: mutiple_arguments.py
Level_2/1_date_time/: date_time.py
Level_2/1_fast_api/: books.py
Level_2/2_read_csv/: feedback_count.py  main.py
Level_2/2_read_csv/resources/: student_scores.csv
Level_2/4_name_main/: my_program_1.py  simple_import_pgm_2.py
Level_2/5_lambda/: main.py
Level_2/6_pydantic/10_validating_assignments/: main.py
Level_2/6_pydantic/11_mutability/: main.py
Level_2/6_pydantic/1_basics/: model.py
Level_2/6_pydantic/2_deserialization/: main.py
Level_2/6_pydantic/3_serialization/: main.py
Level_2/6_pydantic/4_type_coersion/: main.py
Level_2/6_pydantic/5_required_optional_nullable/: main.py
Level_2/6_pydantic/7_beginner_project/: main.py
Level_2/6_pydantic/8_model_configuration/: main.py
Level_2/6_pydantic/9_validation_default_values/: main.py
Level_2/7_multiprocessing/: day2.py  day_1.py
Level_2/fast_api/: books_api.py  books_api_2.py
Level_2/fast_api/models/: Book.py
ecommerce/: __init__.py  shipping.py
