[tool.poetry]
name = "level-2"
version = "0.1.0"
description = ""
authors = ["KK Ramesan <krishnakumar_ramesan@intuit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
fastapi = {extras = ["standard"], version = "^0.114.0"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
jupyterlab = "^4.2.5"
python-dateutil = "^2.9.0.post0"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
